--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -360,11 +360,14 @@ May 5, 2000
    submodules'. This is not so trivial to change (module positions will need
    to be explicitly stored)...
 May 7, 2000
- - Makefile.vc improvements from Balazs Kelemen
+ - Makefile.vc improvements [from Balazs Kelemen]
  - tk_PatchLevel check corrected (complained about Tk 8.0.5) [reported by
    Ulrich Kaage]
 May 10, 2000
  - [Tkenv]/extra-stack= option added, it specifies (in bytes) how much extra
-   stack each activity() module needs when executing under Tkenv.
-   This used to be hardcoded (16384), now users can fine-tune it.
-Know bug: 'load inspector list' doesn't work
+   stack each activity() module needs when executing under Tkenv. This used to
+   be hardcoded (16384), now users can fine-tune it. [suggested by Niko]
+May 21, 2000
+ - bugfix: 'Options|Load inspector list' now works again (you must re-generate
+   your existing inspect.lst files)
+
