--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -267,5 +267,7 @@ Apr 10, 2000
 Apr 13, 2000
  - Changed operator precedence to bind ||,&& thighter than ?: [suggested by Niko]
 May 7, 2000
- - Makefile.vc improvements from Balazs Kelemen
+ - Makefile.vc improvements [from Balazs Kelemen]
+May 22, 2000
+ - const-correctness fix on get_expression() arg list [reported by Frank Paehlke]
 
