--omnetpp-2_0b4 released-- line added to ChangeLog by omnetpp/_tag

--- a/samples/fddi/ChangeLog
+++ b/samples/fddi/ChangeLog
@@ -204,3 +204,4 @@ Mar 12, 2000
   - readme expanded with advice on PVM setup
 May 7, 2000
   - char * --> const char * changes
+------ omnetpp-2_0b4 released ------
