--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -270,4 +270,4 @@ May 7, 2000
  - Makefile.vc improvements [from Balazs Kelemen]
 May 22, 2000
  - const-correctness fix on get_expression() arg list [reported by Frank Paehlke]
-
+------ omnetpp-2_0b4 released ------
