--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -107,3 +107,4 @@ Apr 30, 2000
  - prephtml now puts a version number into the html file
 May 7, 2000
  - replace.c added [from Balazs Kelemen]
+------ omnetpp-2_0b4 released ------
