--- a/samples/fifo2/ChangeLog
+++ b/samples/fifo2/ChangeLog
@@ -10,4 +10,4 @@ Oct 17, 1999
 Jan 18, 2000
  - added explicit cast to math expressions with cPar...
 ------ omnetpp-2.0b3 released ------
------- omnetpp-2_0b4 released ------
+------ omnetpp-2.0b4 released ------
