--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -55,4 +55,4 @@ Apr 5, 2000
 May 7, 2000
  - plove now starts using the classic trick to avoid a hardcoded 'wish' path
    (check top of the 'plove' file).
------- omnetpp-2_0b4 released ------
+------ omnetpp-2.0b4 released ------
