--- a/samples/hcube/ChangeLog
+++ b/samples/hcube/ChangeLog
@@ -4,4 +4,4 @@ Oct 10, 1999
 Jan 18, 2000
  - added explicit cast to math expressions with cPar...
 ------ omnetpp-2.0b3 released ------
------- omnetpp-2_0b4 released ------
+------ omnetpp-2.0b4 released ------
