--- a/samples/hist/ChangeLog
+++ b/samples/hist/ChangeLog
@@ -4,4 +4,4 @@ Oct 10, 1999
 May 21, 2000
  - removed reference to TVEnv
  - inspect.lst fixed (see Tkenv's Options|Load inspector list menu item)
------- omnetpp-2_0b4 released ------
+------ omnetpp-2.0b4 released ------
