--- a/samples/nim/ChangeLog
+++ b/samples/nim/ChangeLog
@@ -1,4 +1,4 @@
 Oct 10, 1999
  - standardized indentation of source files
 ------ omnetpp-2.0b3 released ------
------- omnetpp-2_0b4 released ------
+------ omnetpp-2.0b4 released ------
