--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -203,4 +203,4 @@ May 7, 2000
  - Makefile.vc improvements from Balazs Kelemen
 May 19,2000
  - fixed <Ctrl-H> in text editor
------- omnetpp-2_0b4 released ------
+------ omnetpp-2.0b4 released ------
