--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -370,4 +370,4 @@ May 10, 2000
 May 21, 2000
  - bugfix: 'Options|Load inspector list' now works again (you must re-generate
    your existing inspect.lst files)
------- omnetpp-2_0b4 released ------
+------ omnetpp-2.0b4 released ------
