--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -909,4 +909,4 @@ May 21, 2000
 ------ omnetpp-2.0b4 released ------
 Jun 4, 2000
  - fix: cPar::setfunction() improved and made const-correct (for gcc 2.95.2)
-
+ - warnings eliminated from cllist.cc & coutvect.cc
