--- a/samples/fddi/ChangeLog
+++ b/samples/fddi/ChangeLog
@@ -205,3 +205,5 @@ Mar 12, 2000
 May 7, 2000
   - char * --> const char * changes
 ------ omnetpp-2.0b4 released ------
+Jun 2, 2000
+  - fix in MSVC makefile; warning eliminated in othermod.cc
