--- a/samples/hcube/ChangeLog
+++ b/samples/hcube/ChangeLog
@@ -5,3 +5,4 @@ Jan 18, 2000
  - added explicit cast to math expressions with cPar...
 ------ omnetpp-2.0b3 released ------
 ------ omnetpp-2.0b4 released ------
+------ omnetpp-2.0b5 released ------
