--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -204,3 +204,4 @@ May 7, 2000
 May 19,2000
  - fixed <Ctrl-H> in text editor
 ------ omnetpp-2.0b4 released ------
+------ omnetpp-2.0b5 released ------
