--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -127,3 +127,4 @@ May 10, 2000
    stack each activity() module needs when executing under Cmdenv.
    This used to be hardcoded (8192), now users can fine-tune it.
 ------ omnetpp-2.0b4 released ------
+------ omnetpp-2.0b5 released ------
