--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -248,3 +248,4 @@ Apr 10, 2000
 May 7, 2000
  - Makefile.vc improvements from Balazs Kelemen
 ------ omnetpp-2.0b4 released ------
+------ omnetpp-2.0b5 released ------
