--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -271,3 +271,4 @@ May 7, 2000
 May 22, 2000
  - const-correctness fix on get_expression() arg list [reported by Frank Paehlke]
 ------ omnetpp-2.0b4 released ------
+------ omnetpp-2.0b5 released ------
