--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -910,3 +910,4 @@ May 21, 2000
 Jun 4, 2000
  - fix: cPar::setfunction() improved and made const-correct (for gcc 2.95.2)
  - warnings eliminated from cllist.cc & coutvect.cc
+------ omnetpp-2.0b5 released ------
