--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -373,3 +373,4 @@ May 21, 2000
 ------ omnetpp-2.0b4 released ------
 Jun 2, 2000
  - minor fix in tkcmd.cc [reported by Richard Lyon]
+------ omnetpp-2.0b5 released ------
