--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -108,3 +108,4 @@ Apr 30, 2000
 May 7, 2000
  - replace.c added [from Balazs Kelemen]
 ------ omnetpp-2.0b4 released ------
+------ omnetpp-2.0b5 released ------
