*** empty log message ***

--- a/doc/README
+++ b/doc/README
@@ -152,7 +152,7 @@ I'd like to acknowledge the help and support of several people who contributed
 (with providing their opinions, sending bug reports/fixes, etc.) to making
 OMNeT++ better and more useful for the Internet community: Richard Lyon,
 Joel Sherrill, Nimrod Mesika, Dan Talayco, Y. Ahmet Sekercioglu, Brent Weech,
-Ulrich Kaage, Balazs Kelemen, Alan Kennington, Niko de Bruyne, Mark Rahner,
+Ulrich Kaage, Balazs Kelemen, Alan Kennington, Niko De Bruyne, Mark Rahner,
 Robert Boxall, Kontogiannis Theophanis, Dario Mariani and many others.
 
 I'd also like to thank John Ousterhout and other developers for Tcl and Tk
