*** empty log message ***

--- a/samples/demo/README
+++ b/samples/demo/README
@@ -1,1 +1,8 @@
+DEMO
+====
+
+A tour of all samples.
+
+TO TRY, RUN 'rundemo' or 'rundemo.bat' INSTEAD OF THE 'demo' EXECUTABLE!
+
 Not supported with MSVC at the moment.
