--- a/src/tkenv/TODO
+++ b/src/tkenv/TODO
@@ -5,3 +5,6 @@ General:
  - hotkeys for Step,Run,...
  - .tkenvrc to store options
  - arrow drawing not always consistent with GNED (?)
+ - outvect inspector options dialog, new checkbox: [ ] automatic settings
+ - reload omnetpp.ini between runs
+ - 1 messagebox is enough when simulation stops
