--- a/src/tkenv/TODO
+++ b/src/tkenv/TODO
@@ -8,3 +8,6 @@ General:
  - outvect inspector options dialog, new checkbox: [ ] automatic settings
  - reload omnetpp.ini between runs
  - 1 messagebox is enough when simulation stops
+ - inspector list should save window positions
+ - automatic loading of inspector lists (use "placeholder" windows for
+   not-yet-existing objects)
