--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -379,5 +379,5 @@ July 17, 2000
 July 26, 2000
  - fixed a bug which caused Tcl error when using ev<< or ev.printf() with
    a string than contained curly braces [reported by Nick van Foreest]
-
+ - added Edit|Find... to main menu.
 
