--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -57,3 +57,5 @@ May 7, 2000
    (check top of the 'plove' file).
 ------ omnetpp-2.0b4 released ------
 ------ omnetpp-2.0b5 released ------
+Aug 26, 2000
+ - modified startup code
