--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -211,3 +211,7 @@ July 26, 2000
  - minor fixes on Edit|Find
 Aug 7, 2000
  - makefile changes for RPM support
+Aug 26, 2000
+ - added .gnedrc
+ - find/replace settings are preserved in .gnedrc
+ - implemented "Find next"
