--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -59,3 +59,6 @@ May 7, 2000
 ------ omnetpp-2.0b5 released ------
 Aug 26, 2000
  - modified startup code
+Aug 29, 2000
+ - Makefile.vc modified: generated plove.bat now passes command-line parameters
+   to Plove
