--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -109,3 +109,5 @@ May 7, 2000
  - replace.c added [from Balazs Kelemen]
 ------ omnetpp-2.0b4 released ------
 ------ omnetpp-2.0b5 released ------
+Sep 30, 2000
+ - typos in makemake.in
