*** empty log message ***

--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -229,10 +229,13 @@ Sep 30, 2000
 Nov 14-17, 2000
  - display string handling rewritten. Now GNED won't delete from the
    display strings the tags it doesn't understand. New file: dispstr.tcl.
- - experimental XML support: can export and import XML files. Requires the
-   TclXML package, at least version 1.2. (The contents of TclXML-1.2.tgz should
-   be extracted under the tcl/lib/Tcl8.x directory.) New files: genxml.tcl,
-   parsexml.tcl.
+ - experimental XML support: can export and import XML files.
+   (File|Import XML...,Export XML...)
+   Requires the TclXML package, at least version 1.2. (The contents of
+   TclXML-1.2.tgz should be extracted under the tcl/lib/Tcl8.x directory.)
+   New files: genxml.tcl, parsexml.tcl.
+   BUG in the TclXML-1.2 parser: it silently discards attributes which contain
+   an '&' character!!!!
 TODO:
   attr renamings (to dispstr_xxx);
   delete disp str class from source
