--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -226,7 +226,7 @@ Aug 29, 2000
  - command-line arg handling improved
 Sep 30, 2000
  - improvement just for Cygwin: lexer now explicitly ignores '\r' (=CR) chars
-Nov 14-17, 2000
+Nov 14-20, 2000
  - display string handling rewritten. Now GNED won't delete from the
    display strings the tags it doesn't understand. New file: dispstr.tcl.
  - experimental XML support: can export and import XML files.
@@ -236,6 +236,8 @@ Nov 14-17, 2000
    New files: genxml.tcl, parsexml.tcl.
    BUG in the TclXML-1.2 parser: it silently discards attributes which contain
    '&' or '<' characters!!!!
+Nov 20, 2000
+ - removed bogus asserts around parsened.cc#70 and #140
 TODO:
   delete disp str class from source
 
