--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -229,8 +229,8 @@ Sep 30, 2000
 Nov 14-20, 2000
  - display string handling rewritten. Now GNED won't delete from the
    display strings the tags it doesn't understand. New file: dispstr.tcl.
- - experimental XML support: can export and import XML files.
-   (File|Import XML...,Export XML...)
+ - experimental XML support: GNED can now export and import XML files.
+   (File|Import XML...,Export XML... menu items)
    Requires the TclXML package, at least version 1.2. (The contents of
    TclXML-1.2.tgz should be extracted under the tcl/lib/Tcl8.x directory.)
    New files: genxml.tcl, parsexml.tcl.
