--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -251,6 +251,8 @@ Dec 17, 2000
  - improvement: GNED will refuse to exit or close a NED file if there are text mode
    canvases with edits. You'll have to switch those canvases to graphics
    to get the NED source backparsed.
+ - improvement: "Channel Properties" dialog implemented (cannot handle 'for'
+   loops yet).
 TODO:
   delete disp str class from source
 
