tabs strip scrolling

--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -257,6 +257,7 @@ Dec 18, 2000
  - old display string classes (disp.cc) removed
  - small bugfix on comment handling in Properties dialogs (no longer adds extra
    blank lines)
- - experimental implementation of scrolling the tab strip if there're too many
-   buttons on it
+Dec 18-22, 2000
+ - implemented scrolling for the tabs strip (the one with the names of the open
+   canvases) if there're too many tabs on it
 
