--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -229,11 +229,11 @@ Sep 30, 2000
 Nov 14-19, 2000
  - display string handling rewritten. Now GNED won't delete from the
    display strings the tags it doesn't understand. New file: dispstr.tcl.
- - experimental XML support: GNED can now export and import XML files.
+ - XML support (experimental): GNED can now export and import XML files.
    (File|Import XML...,Export XML... menu items)
-   Requires the TclXML package, at least version 1.2. (The contents of
-   TclXML-1.2.tgz should be extracted under the tcl/lib/Tcl8.x directory.)
-   New files: genxml.tcl, parsexml.tcl.
+   New files in GNED: genxml.tcl, parsexml.tcl.
+ - IMPORTANT! XML SUPPORT REQUIRES THE TclXML PACKAGE, at least version 1.2.
+   (The contents of TclXML-1.2.tgz should be extracted under the tcl/lib/ dir.)
    BUG in the TclXML-1.2 parser: it silently discards attributes which contain
    '&' or '<' characters!!!!
 Nov 19, 2000
@@ -260,4 +260,7 @@ Dec 18, 2000
 Dec 18-22, 2000
  - implemented scrolling for the tabs strip (the one with the names of the open
    canvases) if there're too many tabs on it
+Jan 2, 2000
+ - cosmetic changes in plotedit.tcl
 
+ `
