--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -386,7 +386,7 @@ Sep 29, 2000
  - fixed a bug which caused Tkenv NOT to report an error when the 'p' display
    string tag's 3rd arg (layout) was invalid
  - the 'p' display string tag's 3rd arg (layout) can now be abbreviated:
-   row: r, col: c or column, matrix: m, ring: ri
+   r=row, c=col=column, m=matrix, i=ri=ring
  - added new layout to 'p' tag: exact (abbreviation: e or x); this lets
    one position modules in a module vector one by one
  - submodule display strings may use the parent module's parameters too
@@ -397,7 +397,6 @@ Jan 13, 2000
  - added performance status bar (simsec/sec, events/sec, events/simsec gauges)
 
  TBD:
-      left-align labels;
       add Speedometer calls to all necessary places;
       time-driven intervals;
       events/simsec calculation
