--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -911,7 +911,7 @@ Jun 4, 2000
  - fix: cPar::setfunction() improved and made const-correct (for gcc 2.95.2)
  - warnings eliminated from cllist.cc & coutvect.cc
 ------ omnetpp-2.0b5 released ------
-Jan 3, 2000
+Jan 3, 2001
  - number of cQueue methods made virtual to enable customizing cQueue
    (e.g. adding statistics for maintaining average queue length, etc.)
    [suggested by Holger Karl]
@@ -924,5 +924,7 @@ Jan 3, 2000
    activity() modules. Reason: "Total msgs" count in Tkenv incorrectly
    displayed zero at the beginning of the simulation, while the
    activation/timeout msg objects already existed)
-
+Jan 15, 2001
+ - bugfix: cQueue::insertBefore() and cQueue::insertAfter() didn't take
+   the ownership of the inserted object [reported by Ulrich Kaage]
     
