--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -279,3 +279,4 @@ Nov 19, 2000
 Jan 16, 2001
  - disabled heapcheck in jar_mem.c (this makes nedc a lot faster if compiled with
    Borland C++)
+ - added version mismatch check to generated _n.cc files
