--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -265,3 +265,5 @@ Jan 2, 2001
 Jan 16, 2001
  - fix: added Tcl_FindExecutable(argv[0]) to Tcl initialization code (needed by
    Cygwin 1.1)
+Jan 21, 2001
+ - fixed bug with Ctrl-N (Find next) binding
