--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -111,3 +111,5 @@ May 7, 2000
 ------ omnetpp-2.0b5 released ------
 Sep 30, 2000
  - typos in makemake.in
+Feb 6, 2001
+ - tcl2c now compiles with MSVC.
