--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -267,3 +267,5 @@ Jan 16, 2001
    Cygwin 1.1)
 Jan 21, 2001
  - fixed bug with Ctrl-N (Find next) binding
+Feb 6, 2001
+ - make clean didn't delete tclcode.cc
